Fixed accessibility contrast issues in Database Table badges

--- a/css/libguides.css
+++ b/css/libguides.css
@@ -87,3 +87,6 @@ span.disabled {
 .badge {
     background-color: #333 !important;
 }
+.navbar-default .navbar-brand {
+    color: #333 !important;
+}
